--- a/src/componentes/CartOffCanvas/CartOffCanvas.styles.css
+++ b/src/componentes/CartOffCanvas/CartOffCanvas.styles.css
@@ -1,5 +1,7 @@
 .offcanvas-body{
-    border: solid 0px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    border: solid 0px;
+    background: rgba(232, 139, 224, 0.344);
+
 }
