--- a/src/componentes/Navbar/Navbar.styles.css
+++ b/src/componentes/Navbar/Navbar.styles.css
@@ -9,7 +9,11 @@
     top: 0;
     width: 100vw;
     z-index: 5;
-    height: 5rem;
+    height: 7rem;
+}
+.divIconoMarca{
+    margin-left: -20px;
+    margin-right: 25px;
 }
 .contenedorNavbar{
     display: flex;
@@ -19,10 +23,15 @@
     margin-left: 5rem;
 }
 .divCarrito{
-    margin-right: 5rem;
+    margin-right: 2rem;
 }
 .iconoMarca{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+#navbarSupportedContent{
+    background-color: rgba(255, 255, 255, 0.97);
+    border: solid 2px rgba(163, 19, 189, 0.177);
+    border-radius: 10px;
 }
