--- a/src/componentes/Navbar/Navbar.styles.css
+++ b/src/componentes/Navbar/Navbar.styles.css
@@ -2,9 +2,9 @@
     border: solid 0px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    box-shadow: 0px 9px 81px -5px rgba(163,19,189,0.65);
-    -webkit-box-shadow: 0px 9px 81px -5px rgba(163,19,189,0.65);
-    -moz-box-shadow: 0px 9px 81px -5px rgba(163,19,189,0.65);
+    box-shadow: 0px 9px 81px -5px rgba(0, 0, 0, 0.600);
+    -webkit-box-shadow: 0px 9px 81px -5px rgba(0, 0, 0, 0.600);
+    -moz-box-shadow: 0px 9px 81px -5px rgba(0, 0, 0, 0.600);
     position: fixed;
     top: 0;
     width: 100vw;
@@ -32,6 +32,6 @@
 }
 #navbarSupportedContent{
     background-color: rgba(255, 255, 255, 0.97);
-    border: solid 2px rgba(163, 19, 189, 0.177);
+    border: solid 2px rgba(0, 0, 0, 0.184);
     border-radius: 10px;
 }
