--- a/src/componentes/ItemDetail/ItemDetail.style.css
+++ b/src/componentes/ItemDetail/ItemDetail.style.css
@@ -1,7 +1,7 @@
 .contenedorProductos{
-    margin-top: 15rem;
+    margin-top: 14rem;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
 }
