--- a/src/componentes/Titulo/Titulo.styles.css
+++ b/src/componentes/Titulo/Titulo.styles.css
@@ -2,7 +2,9 @@
     z-index: 1;
     position: absolute;
     top: 150px;
+    padding-left: 6.5rem;
 }
 h2{
     color: black;
+    text-align: center;
 }
