--- a/src/componentes/ItemCounter/ItemCounter.style.css
+++ b/src/componentes/ItemCounter/ItemCounter.style.css
@@ -1,10 +1,31 @@
 *{
     color: black;
 }
-.btn-success{
-    padding: 7px;
-    margin-right: 2px;
+.btnAumentar{
+    border: solid 0px;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    border-radius: 5px;
+    padding: 4px 4.5px 4px 4.5px;
+
 }
-.btn-danger{
-    padding: 9px;
+.btnDisminuir{
+    border: solid 0px;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    border-radius: 5px;
+    padding: 4px 7px 4px 7px;
+}
+
+.itemCounter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.irAlCarrito{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
