--- a/src/componentes/Item/Item.style.css
+++ b/src/componentes/Item/Item.style.css
@@ -1,9 +1,15 @@
 .card{
-    width: 16rem;
+    width: 15rem;
     height: auto;
     justify-content: center;
     align-items: center;
 }
 img{
     width: 175px;
+}
+.card-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
