--- a/src/componentes/ItemDetail/ItemDetail.style.css
+++ b/src/componentes/ItemDetail/ItemDetail.style.css
@@ -4,14 +4,96 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin-bottom: 3rem;
 }
 .imgTitulo{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-bottom: solid 1px;
+    margin-left: 10px;
+    padding-right: 10px;
+    border-right: solid 1px rgba(0, 0, 0, 0.241);
 }
+
+
+.irAlCarrito{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
 .divisor{
-    border-bottom: solid 1px;
+    padding-right: 10px;
+    border-right: solid 1px rgba(0, 0, 0, 0.241);
+}
+
+.card-detail{
+    border: solid 1px rgba(0, 0, 0, 0.241);
+    border-radius: 10px;
+    margin-top: -4rem;
+    display: flex;
+    align-items: center;
+    width: 49rem;
+}
+
+.divPrecio{
+    border-right: solid 1px rgba(0, 0, 0, 0.241);
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.addToCart{
+    height: 37px;
+}
+.cantidad-addToCart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 35px;
+    margin-right: 10px;
+    padding-right: 15px;
+    border-right: solid 1px rgba(0, 0, 0, 0.241);
+}
+
+@media all and (max-width: 800px){
+    .card-detail{
+        flex-direction: column;
+        width: 16rem;
+    }
+    .cantidad-addToCart{
+        border-bottom: solid 1px rgba(0, 0, 0, 0.241);
+        border-right: none;
+        margin-right: 0px;
+        padding-right: 0px;
+        margin-top: -50px;
+    }
+    .divisor{
+        border-bottom: solid 1px rgba(0, 0, 0, 0.241);
+        border-right: none;
+        padding-right: 0px;
+        margin-top: -10px;
+    }
+    .irAlCarrito{
+        margin-bottom: 10px;
+        margin-top: 10px;
+
+
+    }
+    .imgTitulo{
+        border-bottom: solid 1px rgba(0, 0, 0, 0.241);
+        border-right: none;
+        margin-left: 0px;
+        padding-right: 0px;
+        margin-bottom: 13px;
+
+    }
+    .divPrecio{
+        border-bottom: solid 1px rgba(0, 0, 0, 0.241);
+        border-right: none;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
