--- a/src/componentes/Cart/Cart.style.css
+++ b/src/componentes/Cart/Cart.style.css
@@ -61,12 +61,20 @@
     width: 45rem;
 }
 
+.precioTotalPagar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
 .cantidad{
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-left: -2rem;
+    margin-left: -1rem;
     padding-right: 1rem;
     border-right: solid 1px rgba(0, 0, 0, 0.241);
 }
